<resources>
    <string name="app_name">Corner Archive</string>
    <string name="project_logo">프로젝트 로고</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_bar_hint">검색할 키워드 또는 #태그를 입력하세요</string>

    <string-array name="search_sort">
        <item>최신순</item>
        <item>오래된순</item>
        <item>오름차순</item>
        <item>내림차순</item>
    </string-array>

    <!-- Actionbar Title -->
    <string name="title_register">SIGN UP</string>
    <string name="title_search">검색</string>
    <string name="title_search_result">검색 결과</string>

    <!-- Button Text -->
    <string name="btn_register_next">다음</string>
    <string name="btn_register_complete">완료</string>
    <string name="btn_login">Login</string>
    <string name="btn_find_account">forgot your password?</string>
    <string name="btn_register">SIGN UP</string>

    <!-- Login Text -->
    <string name="hint_email_login">EMAIL</string>
    <string name="hint_password_login">PW</string>

    <!-- Register Text -->
    <string name="title_name_input">이름을\n입력해주세요</string>
    <string name="title_email_input">경상대 웹메일 주소를\n입력해 주세요</string>
    <string name="title_password_input">사용할 비밀번호를\n입력해 주세요</string>
    <string name="title_email_auth">이메일의 인증 링크를 통해\n가입을 완료하세요!</string>
    <string name="body_email_auth">이제 프로젝트를 구경해보세요</string>
    <string name="hint_name_input">이름</string>
    <string name="hint_email_input">이메일</string>
    <string name="hint_password_input">비밀번호</string>
    <string name="hint_password_confirm_input">비밀번호 확인</string>
    <string name="text_indicator">%d / %d</string>

    <!-- TextInput Error Message -->
    <string name="name_input_message">이름을 입력해주세요.</string>
    <string name="email_input_message">이메일을 입력해주세요.</string>
    <string name="email_regex_message">이메일 형식을 맞춰주세요.(아이디@gnu.ac.kr)</string>
    <string name="password_input_message">비밀번호를 입력해주세요.</string>
    <string name="password_not_equal_message">두 비밀번호가 일치하지 않습니다.</string>

    <!-- Project Text -->
    <string name="title_category">%s</string>
    <string name="view_all_message">전체 보기</string>
    <string name="project_subject">프로젝트 주제</string>
    <string name="project_description">프로젝트 설명</string>
    <string name="project_scenario">프로젝트 시나리오</string>
    <string name="reference">참고</string>

    <!-- Login Exception Message -->
    <string name="badly_format_exception">The email address is badly formatted.</string>
    <string name="badly_format_message">이메일 형식으로 입력해주세요.</string>
    <string name="no_user_exception">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="no_user_message">존재하지 않는 계정입니다.</string>
    <string name="invalid_password_exception">The password is invalid or the user does not have a password.</string>
    <string name="invalid_password_message">잘못된 비밀번호입니다.</string>
    <string name="not_verified_link_message">인증 링크를 눌러주세요.</string>
    <string name="empty_input_message">이메일과 비밀번호 모두 입력해주세요.</string>

</resources>